// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropInput  1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-bdvvaa lnWPOq"
              type="text"
              value="08/30/2020"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 kuSryJ sc-dkPtyc fHiZNn"
          >
            <button
              aria-label="Open Drop"
              class="StyledButton-sc-323bzc-0 hLEXAf"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropInput  2`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              aria-label="Birthdy date"
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-bdvvaa lnWPOq"
              type="text"
              value="08/30/2020"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 kuSryJ sc-dkPtyc fHiZNn"
          >
            <button
              aria-label="Open Drop"
              class="StyledButton-sc-323bzc-0 hLEXAf"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropInput  3`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 fAimXg sc-bdvvaa lnWPOq"
              disabled=""
              type="text"
              value="08/30/2020"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 kuSryJ sc-dkPtyc fHiZNn"
          >
            <button
              aria-label="Open Drop"
              class="StyledButton-sc-323bzc-0 blBRtd"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropInput  4`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-bdvvaa lnWPOq"
              type="text"
              value="08/30/2020"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 kuSryJ sc-dkPtyc fHiZNn"
          >
            <button
              aria-label="Open calendar"
              class="StyledButton-sc-323bzc-0 hLEXAf"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="FormDown"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <polyline
                  fill="none"
                  points="18 9 12 15 6 9"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropInput  5`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-bdvvaa lnWPOq"
              type="text"
              value="08/30/2020"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 kuSryJ sc-dkPtyc fHiZNn"
          >
            <button
              aria-label="Open Drop"
              class="StyledButton-sc-323bzc-0 hLEXAf"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Calendar"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,5 L22,5 L22,22 L2,22 L2,5 Z M18,5 L18,1 M6,5 L6,1 M2,10 L22,10"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropInput  6`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-bdvvaa dNjmOA"
              type="text"
              value="10"
            />
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 kuSryJ sc-dkPtyc fHiZNn"
          >
            <button
              class="StyledButton-sc-323bzc-0 knherS"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Add"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M12,22 L12,2 M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
            <button
              class="StyledButton-sc-323bzc-0 knherS"
              tabindex="-1"
              type="button"
            >
              <svg
                aria-label="Subtract"
                class="StyledIcon-ofa7kd-0 exrjxz"
                viewBox="0 0 24 24"
              >
                <path
                  d="M2,12 L22,12"
                  fill="none"
                  stroke="#000"
                  stroke-width="2"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropInput  7`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 dsrMSZ sc-bdvvaa hfkuDO"
              type="text"
              value="Plain no focus"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropInput  8`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 dsrMSZ sc-bdvvaa hfkuDO"
              type="text"
              value="Plain with focus"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropInput  9`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-bdvvaa hfkuDO"
              placeholder="Enter phone..."
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropInput  10`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 bFLhoX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 iYasFZ"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 dHgsfl"
      >
        <div
          class="sc-gsDJrp ixnOXx"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 cnyLED"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 evYMFd sc-bdvvaa hfkuDO"
              id="date-id"
              name="date-name"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
